technitium-dns-ton/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: technitium-dns
  labels:
    pod-security.kubernetes.io/enforce: privileged
