technitium-dns-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: technitium-dns
  namespace: technitium-dns
spec:
  hosts:
    - dns.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: technitium-dns-release
            port:
              number: 5380
